Fix button icon spacing issues

--- a/packages/settings-page/src/editor.scss
+++ b/packages/settings-page/src/editor.scss
@@ -57,8 +57,9 @@ $path: "../../../vendor-prefixed/trustedlogin/client/src/assets/";
 		.components-tab-panel__tabs-item {
 			&.upgrade {
 				margin-left: auto;
+
 				svg {
-					margin-right: 10px;
+					margin-right: 5px;
 				}
 
 				&:hover {
